--- a/public/index.html
+++ b/public/index.html
@@ -7,26 +7,11 @@
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/11.3.1/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
     <script defer src="/__/firebase/11.3.1/firebase-auth-compat.js"></script>
-    <!--
-      <script defer src="/__/firebase/11.3.1/firebase-database-compat.js"></script>
-      <script defer src="/__/firebase/11.3.1/firebase-firestore-compat.js"></script>
-      <script defer src="/__/firebase/11.3.1/firebase-functions-compat.js"></script>
-      <script defer src="/__/firebase/11.3.1/firebase-messaging-compat.js"></script>
-    -->
-    <script defer src="/__/firebase/11.3.1/firebase-storage-compat.js"></script>
-    <!--
-      <script defer src="/__/firebase/11.3.1/firebase-analytics-compat.js"></script>
-      <script defer src="/__/firebase/11.3.1/firebase-remote-config-compat.js"></script>
-      <script defer src="/__/firebase/11.3.1/firebase-performance-compat.js"></script>
-    -->
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
+    <script
+      defer
+      src="/__/firebase/11.3.1/firebase-firestore-compat.js"
+    ></script>
     <style media="screen">
       body {
         background: #eceff1;
@@ -125,17 +110,9 @@
 
         try {
           let app = firebase.app();
-          let features = [
-            "auth",
-            "database",
-            "firestore",
-            "functions",
-            "messaging",
-            "storage",
-            "analytics",
-            "remoteConfig",
-            "performance",
-          ].filter((feature) => typeof app[feature] === "function");
+          let features = ["auth", "firestore"].filter(
+            (feature) => typeof app[feature] === "function"
+          );
           loadEl.textContent = `Firebase SDK loaded with ${features.join(
             ", "
           )}`;
