--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       defer
       src="/__/firebase/11.3.1/firebase-firestore-compat.js"
     ></script>
+    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
     <style media="screen">
       body {
         background: #eceff1;
